--- a/colorpalette.html
+++ b/colorpalette.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Palette Generator</title>
-    <link rel="stylesheet" href="Palette.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="wrapper">
@@ -13,6 +13,6 @@
     </ul>
     
     <button class="refresh_btn">Refresh Palette</button>
-    <script src="Palette.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
